[package]
name = "warp-prometheus"
version = "0.1.0"
authors = ["Ryan <yanvalue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.11", default-features = false }
warp = "0.3.0"
once_cell = "1.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }